# Ticket-System-2025

./: .clang-format  .gitignore  1.ans  1.in  1.out  1.out、  2.in  3.in  CMakeLists.txt  README.md  a  evaluate.sh  fxxkdata.py  main  main.cpp  management_system.md  run_test.sh  sample  std.cpp  test.py
.cache/clangd/index/: BPT.hpp.3A9F6997D474EB4F.idx  Hash.h.692D262C31CF6223.idx  MemoryRiver.hpp.E1B1C06E7A2E573C.idx  Operator.h.5B38438B7914C477.idx  Ticket.h.C81F89CA5EA72D93.idx  Time.h.34A91300A24C332A.idx  Train.h.61CDC0043A7C99AE.idx  User.h.B5C4B0DEE8AE431B.idx  exceptions.hpp.12B47D72A2F460C0.idx  exceptions.hpp.A0179B24B352A1F7.idx  exceptions.hpp.A05E919FE515FFDF.idx  main.cpp.F7513A3567A8EDF2.idx  map.hpp.0623ED3B0F5A98A1.idx  priority_queue.hpp.CCD97E02A7A86E83.idx  utility.hpp.5B8976543765F1D8.idx  vector.hpp.579FABF1AAE9F9EE.idx
BPT/test/storage/: storage_test.cpp  test.sh
BPT/test/storage/robust/: medium.in  small.in  small.out
BPT/test/storage/simple/: 1.out  2.out  3.out  4.out  5.out
src/: BPT.hpp  BPTBB.hpp  Hash.cpp  Hash.h  Hash.hpp  MemoryRiver.hpp  Operator.cpp  Operator.h  T3.cpp  Ticket.cpp  Ticket.h  Time.cpp  Time.h  Time.hpp  Train.cpp  Train.h  Train.hpp  User.cpp  User.h  User.hpp  string.hpp  tmp.cpp
src/BPT/test/: CMakeLists.txt
src/map/: 1.out  3.out  test
src/map/data/one/: code.cpp
src/map/src/: code.cpp  map.hpp
src/priority_queue/src/: code  priority_queue.hpp
src/vector/: utility.hpp  vector.hpp
test/: sample.cpp
test/storage/: 1.in
test/storage/robust/: large.out  medium.out
test/storage/simple/: 2.in  4.in
test_data/: edge_case1.in  large_delete.in  medium_random.in  small_seq.in
test_results/: edge_case1.out
(+1 files in other folders)
